--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-tag.macro",
+  "name": "@masterhealth-technologies/graphql-tag.macro",
   "version": "2.0.0",
   "description": "graphql-tag as a babel-macro",
   "author": {
@@ -11,6 +11,9 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
