--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "scripts": {
     "test": "jest",
+    "inspecttest": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "babel": "babel src --out-dir dist --ignore \"src/**/*.test.js,__snapthots__\"",
     "prepublish": "rm -rf dist && npm run babel && mv dist/index.macro.js dist/index.js && cp src/index.d.ts dist/"
   },
